Archive/745155701b59ad7d5559794be7237404-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In instantiation of 'void f(T&) [with T = const int]':
main.cpp:6:19:   required from here
main.cpp:2:17: error: increment of read-only reference 'x'
 void f(T& x) { x++; }
                 ^
